@startuml
!theme plain

entity "Booking" as Booking {
    * bookingId : string
    bookingDate : string
    numberOfPeople : int
    status : string
}

entity "Customer" as Customer {
    * customerId : string
    fullName : string
    phoneNumber : string
    email : string
}

entity "Employee" as Employee {
    * employeeId : string
    fullName : string
    position : string
    phoneNumber : string
    email : string
}

entity "Tour" as Tour {
    * tourId : string
    tourName : string
    destination : string
    price : double
    durationDays : int
    availableSeats : int
    maxCapacity : int
    departureDate : string
    status : string
}

Booking }o--|| Customer : "belongs to"
Booking }o--|| Tour : "includes"
Booking }o--|| Employee : "handled by"

@enduml
